Set attributes to Account Manager.

--- a/dual-farma/dual-farma/Web.config
+++ b/dual-farma/dual-farma/Web.config
@@ -44,4 +44,8 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+    <connectionStrings>
+      <add name="Azure" connectionString="Server=tcp:farmaticadb.database.windows.net,1433;Database=FarmaTicaDB;User ID=farmaticadbadmin@farmaticadb;Password={Administrador.};Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+    </connectionStrings>
+    
 </configuration>
