--- a/dual-farma/dual-farma/dual-farma.csproj
+++ b/dual-farma/dual-farma/dual-farma.csproj
@@ -98,6 +98,9 @@
     <Compile Include="BLL\Account_Manager.cs" />
     <Compile Include="BLL\Constants.cs" />
     <Compile Include="BLL\Medicine_Manager.cs" />
+    <Compile Include="Controllers\InfoController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\MedicineController.cs" />
     <Compile Include="Controllers\TestController.cs" />
     <Compile Include="DAL\DbConnectionFactory.cs" />
     <Compile Include="DAL\DbContext.cs" />
@@ -121,6 +124,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Data.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTesting\ClientTesting.cs" />
     <Compile Include="UnitTesting\DoctorTesting.cs" />
@@ -142,7 +146,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
