Finalizado Doctor_Manager.

--- a/dual-farma/dual-farma/dual-farma.csproj
+++ b/dual-farma/dual-farma/dual-farma.csproj
@@ -89,6 +89,7 @@
     <Compile Include="BLL\Account_Manager.cs" />
     <Compile Include="BLL\Client_Manager.cs" />
     <Compile Include="BLL\Constants.cs" />
+    <Compile Include="BLL\Doctor_Manager.cs" />
     <Compile Include="BLL\Medicine_Manager.cs" />
     <Compile Include="DAL\DbConnectionFactory.cs" />
     <Compile Include="DAL\DbContext.cs" />
