--- a/dual-farma/dual-farma/dual-farma.csproj
+++ b/dual-farma/dual-farma/dual-farma.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.0\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="..\packages\Microsoft.Net.Compilers.1.0.0\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.1.0.0\build\Microsoft.Net.Compilers.props')" />
@@ -9,7 +9,7 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{B062D86A-6A02-412D-AD1D-44F66EB62E57}</ProjectGuid>
+    <ProjectGuid>{11299E5A-0263-4A8D-A737-4D7BA58A8088}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -87,25 +87,31 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="BLL\Account_Manager.cs" />
+    <Compile Include="BLL\BranchOfficeManager.cs" />
     <Compile Include="BLL\Client_Manager.cs" />
     <Compile Include="BLL\Constants.cs" />
     <Compile Include="BLL\Doctor_Manager.cs" />
     <Compile Include="BLL\Medicine_Manager.cs" />
+    <Compile Include="BLL\OrderManager.cs" />
     <Compile Include="DAL\DbConnectionFactory.cs" />
     <Compile Include="DAL\DbContext.cs" />
     <Compile Include="DAL\IConnectionFactory.cs" />
     <Compile Include="DAL\IDbContext.cs" />
     <Compile Include="DAL\IUnitOfWork.cs" />
+    <Compile Include="DAL\Models\BranchOffice.cs" />
     <Compile Include="DAL\Models\Client.cs" />
+    <Compile Include="DAL\Models\Doctor.cs" />
     <Compile Include="DAL\Models\Medicine.cs" />
     <Compile Include="DAL\Models\Order.cs" />
-    <Compile Include="DAL\Models\Role.cs" />
+    <Compile Include="DAL\Models\Prescription.cs" />
     <Compile Include="DAL\Models\User.cs" />
+    <Compile Include="DAL\Repositories\BranchOfficeRepository.cs" />
     <Compile Include="DAL\Repositories\ClientRepository.cs" />
+    <Compile Include="DAL\Repositories\DoctorRepository.cs" />
     <Compile Include="DAL\Repositories\MedicineRepository.cs" />
     <Compile Include="DAL\Repositories\OrderRepository.cs" />
+    <Compile Include="DAL\Repositories\PrescriptionRepository.cs" />
     <Compile Include="DAL\Repositories\Repository.cs" />
-    <Compile Include="DAL\Repositories\RoleRepository.cs" />
     <Compile Include="DAL\Repositories\UserRepository.cs" />
     <Compile Include="DAL\UnitOfWork.cs" />
     <Compile Include="Global.asax.cs">
