--- a/farma-tica/farma-tica/Web.config
+++ b/farma-tica/farma-tica/Web.config
@@ -41,6 +41,6 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-      <add name="Azure" connectionString="Server=tcp:farmaticadb.database.windows.net,1433;Database=FarmaTicaDB;User ID=farmaticadbadmin@farmaticadb;Password={Administrador.};Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
-    </connectionStrings>
+      <add name="Azure" connectionString="Server=tcp:farmaticadb.database.windows.net,1433;Database=FarmaTicaDB;User ID=FarmaticaDBUser;Password={Administrador.};Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
