--- a/farma-tica/farma-tica/farma-tica.csproj
+++ b/farma-tica/farma-tica/farma-tica.csproj
@@ -146,7 +146,9 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
@@ -166,6 +168,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\IdBranchOffice.cs" />
     <Compile Include="Controllers\IdClient.cs" />
+    <Compile Include="Controllers\IdCompany.cs" />
     <Compile Include="Controllers\IdMed.cs" />
     <Compile Include="Controllers\IdOrder.cs" />
     <Compile Include="Controllers\IdPrescription.cs" />
