delete unnecessary comments and fix types

--- a/farma-tica/farma-tica/farma-tica.csproj
+++ b/farma-tica/farma-tica/farma-tica.csproj
@@ -165,27 +165,27 @@
     <Compile Include="BLL\Prescription_Manager.cs" />
     <Compile Include="Controllers\ClientController.cs" />
     <Compile Include="Controllers\DoctorController.cs" />
-    <Compile Include="Controllers\IdBranchOffice.cs" />
-    <Compile Include="Controllers\IdClient.cs" />
-    <Compile Include="Controllers\IdCompany.cs" />
-    <Compile Include="Controllers\IdMed.cs" />
-    <Compile Include="Controllers\IdOrder.cs" />
-    <Compile Include="Controllers\IdPrescription.cs" />
+    <Compile Include="Controllers\Models\IdBranchOffice.cs" />
+    <Compile Include="Controllers\Models\IdClient.cs" />
+    <Compile Include="Controllers\Models\IdCompany.cs" />
+    <Compile Include="Controllers\Models\IdMed.cs" />
+    <Compile Include="Controllers\Models\IdOrder.cs" />
+    <Compile Include="Controllers\Models\IdPrescription.cs" />
     <Compile Include="Controllers\LoginController.cs" />
-    <Compile Include="Controllers\LoginData.cs" />
-    <Compile Include="Controllers\MedicineByOffice.cs" />
+    <Compile Include="Controllers\Models\LoginData.cs" />
+    <Compile Include="Controllers\Models\MedicineByOffice.cs" />
     <Compile Include="Controllers\MedicineController.cs" />
-    <Compile Include="Controllers\MedicineCreate.cs" />
-    <Compile Include="Controllers\NewClient.cs" />
-    <Compile Include="Controllers\OrderStatus.cs" />
-    <Compile Include="Controllers\OrderWithoutPrescription.cs" />
-    <Compile Include="Controllers\OrderWithPrescription.cs" />
+    <Compile Include="Controllers\Models\MedicineCreate.cs" />
+    <Compile Include="Controllers\Models\NewClient.cs" />
+    <Compile Include="Controllers\Models\OrderStatus.cs" />
+    <Compile Include="Controllers\Models\OrderWithoutPrescription.cs" />
+    <Compile Include="Controllers\Models\OrderWithPrescription.cs" />
     <Compile Include="Controllers\PedidoController.cs" />
     <Compile Include="Controllers\PrescriptionController.cs" />
-    <Compile Include="Controllers\PrescriptionInfo.cs" />
-    <Compile Include="Controllers\ReturnStatus.cs" />
+    <Compile Include="Controllers\Models\PrescriptionInfo.cs" />
+    <Compile Include="Controllers\Models\ReturnStatus.cs" />
     <Compile Include="Controllers\StatsController.cs" />
-    <Compile Include="Controllers\UpdateMed.cs" />
+    <Compile Include="Controllers\Models\UpdateMed.cs" />
     <Compile Include="DAL\DbConnectionFactory.cs" />
     <Compile Include="DAL\DbContext.cs" />
     <Compile Include="DAL\IConnectionFactory.cs" />
